--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,13 @@
 <h1>Create an article</h1>
+<! this is a way of diplaying errors to the user>
+<% if @article.errors.any? %>
+    <h2>The following errors prevented the following article from being created</h2>
+   <ul>
+    <%@article.errors.full_messages.each do |msg|%>
+        <li><% msg %></li>
+        <% end %>
+   </ul>
+    <% end %>
 
 <%= form_for @article do |f| %>
 
