--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,13 +1,15 @@
+<h1>Edit existing article</h1>
+
 <h1>Create an article</h1>
 
 <% if @article.errors.any? %>
     <h2>The following errors prevented the following article from being created</h2>
-   <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-        <li><% msg %></li>
-        <% end %>
-   </ul>
-    <% end %>
+    <ul>
+      <% @article.errors.full_messages.each do |msg| %>
+          <li><% msg %></li>
+      <% end %>
+    </ul>
+<% end %>
 
 <%= form_for @article do |f| %>
 
@@ -29,6 +31,6 @@
 
     </p>
 
-<% end%>
+<% end %>
 
 <%= link_to "Back to articles listing", articles_path %>
