--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,6 +14,7 @@
     <td><%= article_display.description %></td>
     <td><%= link_to 'Edit', edit_article_path(article_display) %></td>
     <td><%= link_to 'Show', article_path(article_display) %></td>
+    <td><%= link_to 'Delete', article_path(article_display), method: :delete, data: {confirm: "Are you sure?" } %></td>
   </tr>
       <% end %>
 </table>
