--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>Welcome to the Home page</h1>
+<div class="center jumbotron">
+  <h1>Alpha Blog</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg" %>
 
-<%= link_to "Alpha blog", articles_path %> | <%= link_to 'About', about_path %>
+</div>
+
