--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
   <h1>Alpha Blog</h1>
-  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg" %>
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge"%>
 
 </div>
 
