--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,25 +7,44 @@
     </ul>
 <% end %>
 
-<%= form_for @article do |f| %>
+<div class='row'>
+  <div class='col-xs-12'>
 
-    <p>
 
-      <%= f.label :title %></br>
-      <%= f.text_field :title %>
+<!-- Form builder -->
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form" }) do |f| %>
+        <div class="form-group">
+            <div class="control-label col-sm-2">
+             <%= f.label :title %>
+            </div>
 
-    </p>
-    <p>
+            <div class="col-sm-8">
+             <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+            </div>
+        </div>
 
-      <%= f.label :description %></br>
-      <%= f.text_area :description %>
+        <div class="form-group">
+          <div class="control-label col-sm-2">
+            <%= f.label :description  %>
+          </div>
 
-    </p>
-    <p>
+          <div class="col-sm-8">
+            <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
+          </div>
+        </div>
 
-      <%= f.submit %>
+       <div class="form-group">
+         <div class="col-sm-offset-2 col-sm-10">
+          <%= f.submit class: 'btn btn-primary btn-lg' %>
+         </div>
+       </div>
 
-    </p>
+    <% end%>
 
-<% end%>
-<%= link_to "Back to articles listing", articles_path %>
+    <div class="col-xs-4 col-xs-offset-4">
+       [ <%= link_to "Cancel request and return to articles listing", articles_path %> ] <!-- adding [] to front adds
+        to page-->
+    </div>
+
+  </div>
+</div>
