--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,16 @@
-<% flash.each do |name, msg| %>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+
+<!-- This gets triggered via the flash notice in the articles_controller.rb file-->
+    <% flash.each do |name, msg| %> <!-- alert- is going to be associated with name -->
+    <div class='alert alert-<%="#{name}" %>'>
+        <a href="#" class="close" data-dismiss="aler">&#215;</a>
+        <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+    </div>
+
     <ul>
       <li><%= msg %></li>
     </ul>
 <% end %>
+  </div>
+</div>
