Add user data to articles listing page

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,6 +11,12 @@
 
           <div class="article-body">
             <%= truncate(article_display.description, length: 100) %>
+            <div class="article-meta-details">
+                <small>Created By: <%= article.user.username if article.user%>,
+                     <%= time_ago_in_words(article.created_at)%> ago,
+                     last updated: <%= time_ago_in_words(article.updated_at)%> ago
+                </small>
+            </div>
           </div>
 
             <div class="article-actions">
