--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,39 +1,5 @@
 <h1 align="center">Listing all articles</h1>
 
-  <% @articles_list.each do |article_display|%>
-    <div class="row">
-      <div class="col-xs-8 col-xs-offset-2">
-        <div class="well well-lg">
-          <div class="article-title">
-            <!-- want article path to be a link and go to show article page -->
-            <%= link_to article_display.title, article_path(article_display) %>
-          </div>
-
-          <div class="article-body">
-            <%= truncate(article_display.description, length: 100) %>
-            <div class="article-meta-details">
-                <small>Created By: <%= article_display.user.username if article_display.user%>,
-                     <%= time_ago_in_words(article_display.created_at)%> ago,
-                     last updated: <%= time_ago_in_words(article_display.updated_at)%> ago
-                </small>
-            </div>
-          </div>
-
-            <div class="article-actions">
-             <%= link_to "Edit this article", edit_article_path(article_display), class: "btn btn-xs btn-primary" %>
-             <%= link_to "Delete this article", articles_path(article_display), method: :delete,
-                        data: {confirm: "Are you sure you want to delete the article?"},
-                        class: "btn btn-xs btn-danger" %>
-            </div>
-        </div>
-      </div>
-    </div>
-
-
-   <!-- Getting rid of these 3 below and replacing it with the above -->
-   <!-- <td><%= link_to 'Edit', edit_article_path(article_display) %></td>
-    <td><%= link_to 'Show', article_path(article_display) %></td>
-    <td><%= link_to 'Delete', article_path(article_display), method: :delete, data: {confirm: "Are you sure?" }
-%></td>-->
-
-<% end %>
+<!--- This is referring to the partial _article.html.erb file, and for the article partial
+use @articles as the value for obj --->
+  <%= render 'article', obj: @articles%>
