--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,12 @@ $navbar-default-bg: #7d7b9b;
   padding-bottom: 15px;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
