--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,4 +2,11 @@
 
 <!--- This is referring to the partial _article.html.erb file, and for the article partial
 use @articles as the value for obj --->
+  <div align="center">
+     <%= will_paginate %>
+  </div>
+
   <%= render 'article', obj: @articles%>
+  <div align="center">
+    <%= will_paginate %>
+  </div>
