--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -17,12 +17,17 @@
             </div>
           </div>
 
-          <div class="article-actions">
-            <%= link_to "Edit this article", edit_article_path(article_display), class: "btn btn-xs btn-primary" %>
-            <%= link_to "Delete this article", articles_path(article_display), method: :delete,
+ <!-- This resricts only a logged in user who created the article to be able to edit said articles -->
+          <% if logged_in? && current_user == article.user %>
+            <div class="article-actions">
+
+              <%= link_to "Edit this article", edit_article_path(article_display), class: "btn btn-xs btn-primary" %>
+              <%= link_to "Delete this article", articles_path(article_display), method: :delete,
                         data: {confirm: "Are you sure you want to delete the article?"},
                         class: "btn btn-xs btn-danger" %>
-          </div>
+            </div>
+          <% end %>
+
         </div>
       </div>
     </div>
