--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,9 +19,10 @@
    <hr>
    <%= simple_format(@article.description) %> <!-- this will display the formatting you create-->
 
-   <!--link_to will give you a button in embedded ruby-->
+   <!--link_to will give you a button in embedded ruby, also current_user.admin?
+   refers to add_admin_to_users in migration file-->
     <div class="article-actions">
-      <% if logged_in? && current_user == @article.user %>
+      <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
         <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
         <%= link_to "Delete this article", articles_path(@article), method: :delete,
                                         data: {confirm: "Are you sure you want to delete the article?"},
