Making fixes so the application works

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,7 +9,7 @@
          <li class="article-title">
            <%= link_to @article.user.username, user_path(@article.user)%>
          </li>
-         <li><small><%= pluralize(@article.user.articles.count, "artilcle") if @article.user.articles %>
+         <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
          </small></li>
        </div>
      </div>
