--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -19,7 +19,7 @@
 
  <!-- This restricts only a logged in user who created the article to be able to edit said articles unless they are an
   admin -->
-          <% if logged_in? && (current_user == article.user || current_user.admin?) %>
+          <% if logged_in? && (current_user == article_display.user || current_user.admin?) %>
             <div class="article-actions">
 
               <%= link_to "Edit this article", edit_article_path(article_display), class: "btn btn-xs btn-primary" %>
