--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,31 +1,6 @@
 <h1 align="center">Create New Category</h1>
 
-<!-- copied over from _form.html.erb-->
+<!--  referenced from _form.html.erb-->
+<%= render 'form' %>
 
-<%= render 'shared/errors', obj: @category %>
-
-    <!-- Form builder -->
-    <%= form_for(@category, :html => {class: "form-horizontal", role: "form" }) do |f| %>
-        <div class="form-group">
-          <div class="control-label col-sm-2">
-            <%= f.label :name %>
-          </div>
-
-          <div class="col-sm-8">
-            <%= f.text_field :name, class: "form-control", placeholder: "Category Name", autofocus: true %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <%= f.submit class: 'btn btn-primary btn-lg' %>
-          </div>
-        </div>
-
-    <% end%>
-
-    <div class="col-xs-4 col-xs-offset-4">
-      [ <%= link_to "Cancel request and return to articles listing", articles_path %> ] <!-- adding [] to front adds
-        to page-->
-    </div>
 
