fixing some errors

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,6 @@
 <h1>Welcome to the About page</h1>
-
+    <p> This application was built to give me, Tracey Dolby, practice building applications in Ruby
+    I absolutely love Ruby, it is the only language so far I have been able to teach myself. It wasn't easy, it took
+      months of me working 2-3 hours a day on it. I hope you enjoy this application.
+    </p>
 <%= link_to 'Home', root_path %>
