--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,12 +22,12 @@
              aria-expanded="false">Actions <span class="caret"></span></a>
              <ul class="dropdown-menu">
                 <li><%= link_to "New Article", new_article_path%></li>
-                <li><a href="#">Another action</a></li>
-               <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
+
+               <!--  This is just to have a list in the dropdown can add more if needed.
+               <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
+                <li><a href="#">One more separated link</a></li> -->
              </ul>
          </li>
         <% end %>
@@ -68,7 +68,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to 'Edit your profile', edit_user_path(current_user) %></li>
                 <li><%= link_to 'View your profile', user_path(current_user) %></li>
-                <li><a href="#">Something else here</a></li>
+
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
